--- a/pom.xml
+++ b/pom.xml
@@ -67,21 +67,13 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>5.2.4.RELEASE</version>
 		</dependency>
-		
+
 		<!-- bonecp依赖 -->
 		<!-- https://mvnrepository.com/artifact/com.jolbox/bonecp -->
 		<dependency>
 			<groupId>com.jolbox</groupId>
 			<artifactId>bonecp</artifactId>
 			<version>0.8.0.RELEASE</version>
-		</dependency>
-
-		<!-- Log4J依赖 -->
-		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
 		</dependency>
 
 		<!-- Jstl依赖 -->
@@ -91,6 +83,19 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+
+		<!-- Log4J依赖 -->
+		<!-- https://logging.apache.org/log4j/2.x/maven-artifacts.html -->
+		<dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.1</version>
+        </dependency>
 
 	</dependencies>
 </project>
